--- a/inst/scripts/make-data_for_v02.Rmd
+++ b/inst/scripts/make-data_for_v02.Rmd
@@ -1,8 +1,36 @@
-#This script for the v02 dataset
+---
+title: "make-data_for_v02"
+author: 
+- name: Satoshi Kume
+  email: satoshi.kume.1984@gmail.com
+date: "`r Sys.Date()`"
+graphics: no
+package: BioImageDbs
+output:
+  BiocStyle::html_document:
+      toc_float: false
+vignette: >
+  %\VignetteIndexEntry{make-data_for_v02}
+  %\VignetteEncoding{UTF-8}
+  %\VignetteDepends{ExperimentHub}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
+---
 
-################################################################
-## Load the package
-################################################################
+
+```{r style, echo = FALSE, results = 'asis', message=FALSE}
+BiocStyle::markdown()
+```
+
+**Last modified:** `r file.info("make-data_for_v02.Rmd")$mtime`<br />
+**Compiled**: `r date()`
+
+**This script for the v02 dataset**
+
+# Load the package
+
+```{r echo=TRUE, eval=FALSE}
 #Install
 #rm(list=ls())
 devtools::install_github( "kumeS/BioImageDbs", force = TRUE )
@@ -11,12 +39,13 @@ library(BioImageDbs)
 #Source
 source(system.file("scripts", "ImgProc_for_v02.R", package="BioImageDbs"))
 source(system.file("scripts", "ImageView_for_v02.R", package="BioImageDbs"))
-################################################################
-#Convert the images to the array data in R
-################################################################
-################################################################
-#SampleDataset_cats_segmentation
-################################################################
+```
+
+# Convert the images to the array data in R
+
+## SampleDataset_cats_segmentation
+
+```{r echo=TRUE, eval=FALSE}
 #Set parameters
 DataFolder <- "SampleDataset_cats_segmentation"
 DataPath <- "./BioImageDbs_02_Dataset_v02"
@@ -43,11 +72,13 @@ ImageView2D(Dat$Train, Interval=0.8, Name=paste0(DataFolder, "_4dTensor_train_da
 filesstrings::file.move(files=paste0(DataFolder, "_4dTensor_train_dataset.gif"),
                         destinations=DataPath, overwrite = TRUE)
 
-################################################################
-#EM_id0005_Mouse_Kidney_2D
-################################################################
-#Mito_OriginalData_512 / Mito_GroundTruth_512
+```
 
+## EM_id0005_Mouse_Kidney_2D
+
+### Mito_OriginalData_512 / Mito_GroundTruth_512
+
+```{r echo=TRUE, eval=FALSE}
 #Set parameters
 DataPath <- "./BioImageDbs_02_Dataset_v02"
 DataFolder <- "EM_id0005_Mouse_Kidney_2D"
@@ -77,16 +108,18 @@ ImageView2D(Dat$Train, Interval=0.8, Name=paste0(DataFolder, DataFolder_Name, "_
 filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, "_train_dataset.gif"),
                         destinations=DataPath, overwrite = TRUE)
 
+```
 
-#Mito_OriginalData_512 / Mito_GroundTruth_512
+### MitoAll_OriginalData_1024 / MitoAll_GroundTruth_1024
 
+```{r echo=TRUE, eval=FALSE}
 #Set parameters
-DataFolder <- "EM_id0005_Mouse_Kidney_2D"
 DataPath <- "./BioImageDbs_02_Dataset_v02"
-DataFolder_Name <- "_Mito512_4dTensor"
-Original_path="Mito_OriginalData_512"
-GroundTruth_path="Mito_GroundTruth_512"
-WIDTH00 <- 512; HEIGHT00 <- 512; CHANNELS01 <- 1; CHANNELS02 <- 1
+DataFolder <- "EM_id0005_Mouse_Kidney_2D"
+DataFolder_Name <- "_Mito1024_4dTensor"
+Original_path="MitoAll_OriginalData_1024"
+GroundTruth_path="MitoAll_GroundTruth_1024"
+WIDTH00 <- 1024; HEIGHT00 <- 1024; CHANNELS01 <- 1; CHANNELS02 <- 1
 
 #Run the conversion
 DataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
@@ -96,17 +129,17 @@ DataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
                   Original_path=Original_path,
                   GroundTruth_path=GroundTruth_path,
                   FileName=paste0(DataFolder, DataFolder_Name),
-                  Binary=FALSE)
+                  Binary=TRUE)
 #Move data
 filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, ".Rds"),
                         destinations=DataPath, overwrite = TRUE)
 #Read data
 Dat <- readRDS( paste0(DataPath, "/", DataFolder, DataFolder_Name, ".Rds") )
-#str(Dat)
-#str(Dat$Train)
-#table(Dat$Train$Train_GroundTruth)
+str(Dat)
+table(Dat$Train$Train_GroundTruth)
+
 ImageView2D(Dat$Train, Interval=0.8, Name=paste0(DataFolder, DataFolder_Name, "_train_dataset"))
 filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, "_train_dataset.gif"),
                         destinations=DataPath, overwrite = TRUE)
-
+```
 
