--- a/inst/scripts/make-data_for_v02.Rmd
+++ b/inst/scripts/make-data_for_v02.Rmd
@@ -60,6 +60,7 @@ DataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
                   GroundTruth_path="GroundTruth_8b",
                   FileName=paste0(DataFolder, "_4dTensor"),
                   Binary=FALSE)
+
 #Move data
 filesstrings::file.move(files=paste0(DataFolder, "_4dTensor.Rds"),
                         destinations=DataPath, overwrite = TRUE)
@@ -96,6 +97,7 @@ DataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
                   GroundTruth_path=GroundTruth_path,
                   FileName=paste0(DataFolder, DataFolder_Name),
                   Binary=FALSE)
+
 #Move data
 filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, ".Rds"),
                         destinations=DataPath, overwrite = TRUE)
@@ -130,6 +132,7 @@ DataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
                   GroundTruth_path=GroundTruth_path,
                   FileName=paste0(DataFolder, DataFolder_Name),
                   Binary=TRUE)
+
 #Move data
 filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, ".Rds"),
                         destinations=DataPath, overwrite = TRUE)
@@ -163,6 +166,7 @@ DataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
                   GroundTruth_path=GroundTruth_path,
                   FileName=paste0(DataFolder, DataFolder_Name),
                   Binary=TRUE)
+
 #Move data
 filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, ".Rds"),
                         destinations=DataPath, overwrite = TRUE)
@@ -170,6 +174,7 @@ filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, ".Rds"),
 Dat <- readRDS( paste0(DataPath, "/", DataFolder, DataFolder_Name, ".Rds") )
 str(Dat)
 table(Dat$Train$Train_GroundTruth)
+table(Dat$Test$Test_GroundTruth)
 
 ImageView2D(Dat$Train, Interval=0.8, Name=paste0(DataFolder, DataFolder_Name, "_train_dataset"))
 filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, "_train_dataset.gif"),
